2007-06-17 Sancho Lerena  <slerena@artica.es>

	* include/languages/language_en.php: Just a few words added.
	
	* pandoradb.sql: Added disable field for alerts.
	
	* operation/agentes/estado_alertas.php: Show disabled alerts.
	
	* godmode/agentes/configurar_agente.php,
	godmode/agentes/alert_manager.php: Allow to disable individual
	alerts.

	* godmode/reporting/map_builder.php: First version of map
	builder. It doesnt work yet, but has some features implemented.	

2007-06-16  Raul Mateos  <raulofpandora@gmail.com>
	
	* godmode/menu.php: Updated component groups highlight.
	
	* operation/snmpconsole/*.php, general/logon_ok.php,
	godmode/db/db_info_data.php, godmode/servers/manage_recontask.php,
	godmode/servers/modificar_server.php, operation/agentes/exportdata.php:
	Removed old raya style and changed to new style. 
	Closed hundreds of unclosed html tags (review W3C standards)
	
	* operation/servers/view_server.php, godmode/reporting/graph_builder.php:
	Closed html tags.
	
	* include/styles/pandora.css: Deleted definetely raya style.
	
	* include/styles/tip.css: Updated tip2 style to datos2 colour.
	
	* godmode/alerts/configure_alert.php, godmode/modules/manage*form.php:
	Changed databox style to databox_color

2007-06-13  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/menu.php, operation/menu.php, include/pandora.css,
	include/op.css, include/god.css: Updated with styles to avoid top
	and bottom border.
	
	* godmode/groups/group_list.php, godmode/users/*.php,
	operation/users/*.php, godmode/servers/*.php,
	operation/snmpconsole/snmp_alert.php,
	godmode/reporting/map_builder.php, operation/messages/message.php:
	Removed old raya style and changed to new style.
	
	* include/languages/language_en.php: Changed some typing error.

2007-06-12  Sancho Lerena  <slerena@artica.es>

	* operation/reporting/reporting_viewer.php: Solved problems with ACL.
	
	* operation/reporting/graph_viewer.php: ACL to delete graph
	